[gd_scene load_steps=23 format=2]

[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Enemies/MiniHank/MiniHankCorpse.png" type="Texture" id=2]
[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Managing/MoneyDropper.gd" type="Script" id=4]
[ext_resource path="res://Entities/Enemies/MiniHank/MiniHank.gd" type="Script" id=5]
[ext_resource path="res://Entities/Enemies/MiniHank/MiniHank.png" type="Texture" id=6]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarEmpty.png" type="Texture" id=7]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarFull.png" type="Texture" id=8]
[ext_resource path="res://RadialGradient.png" type="Texture" id=9]
[ext_resource path="res://Entities/DamageManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://Managing/SoundManager.gd" type="Script" id=11]
[ext_resource path="res://Entities/Enemies/MachineHurt.wav" type="AudioStream" id=12]
[ext_resource path="res://Entities/Enemies/MiniHank/MiniHankCorpseStick.png" type="Texture" id=13]
[ext_resource path="res://Entities/Enemies/MiniHank/Shotgun.png" type="Texture" id=14]
[ext_resource path="res://Entities/Effects/RobotSparks/RobotSparks.tscn" type="PackedScene" id=15]
[ext_resource path="res://Entities/Enemies/Shoot.wav" type="AudioStream" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 11.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 6 )

[sub_resource type="CircleShape2D" id=3]
radius = 148.084

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -5, -31 ), Vector2( -5, -32 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, -31 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -5, -32 ), Vector2( -5, -31 ), Vector2( -5, -33 ) ]
}

[node name="MiniHank" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 17
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( -1, 1 )
texture = ExtResource( 6 )
offset = Vector2( 0, -11 )
hframes = 3
vframes = 2
frame = 3

[node name="Hurtbox" parent="Sprite" instance=ExtResource( 3 )]
visible = false
position = Vector2( -2, -9 )
rotation = 3.14159
scale = Vector2( 1, -1 )
collision_layer = 4
immTime = 0.025

[node name="CollisionShape2D" parent="Sprite/Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="Eye1" type="Light2D" parent="Sprite"]
position = Vector2( -5, -16 )
scale = Vector2( 0.568863, 0.517303 )
texture = ExtResource( 9 )
texture_scale = 0.03
color = Color( 0.647059, 0.580392, 0.12549, 1 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( -5, -31 )

[node name="Sprite" type="Sprite" parent="Gun"]
position = Vector2( 9, -1 )
texture = ExtResource( 14 )
offset = Vector2( -6, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 7, -6 )
shape = SubResource( 2 )

[node name="Collisions" type="Node2D" parent="."]

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 1 )]
visible = false
mustBeInSight = false

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 3 )

[node name="MoneyDropper" type="Node2D" parent="."]
script = ExtResource( 4 )
moneyRange = Vector2( 2, 7 )
valueRange = Vector2( 1, 4 )

[node name="DamageManager" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, -12 )
maxHealth = 900
kbAmount = 128.0
upwardsKB = 51.0
hurtSFXPath = NodePath("../HitSFX")
difficulty = 0
corpseSprites = [ ExtResource( 2 ), ExtResource( 14 ), ExtResource( 13 ) ]
spritePath = NodePath("../Sprite")
deathParticles = ExtResource( 15 )

[node name="HitSFX" type="Node2D" parent="."]
script = ExtResource( 11 )
audio = ExtResource( 12 )
volumeMod = 5.0
bus = "SFX"

[node name="ShootSFX" type="Node2D" parent="."]
position = Vector2( 0, -12 )
script = ExtResource( 11 )
audio = ExtResource( 16 )
volumeMod = -10.0
pitchShiftRange = 4.0
bus = "ReverbLow"

[node name="Timers" type="Node" parent="."]

[node name="Aim" type="Timer" parent="Timers"]
wait_time = 0.8
one_shot = true

[node name="Shoot" type="Timer" parent="Timers"]
wait_time = 3.5
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 6 )
anims/Walk = SubResource( 5 )

[node name="Healthbar" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = -43.0
margin_right = 9.0
margin_bottom = -38.0
max_value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="dead" from="." to="MoneyDropper" method="drop_money"]
[connection signal="hurt" from="Sprite/Hurtbox" to="DamageManager" method="take_damage"]
[connection signal="timeout" from="Timers/Shoot" to="." method="_on_shoot_state_timeout"]

[editable path="Sprite/Hurtbox"]
[editable path="Collisions/PlayerDetection"]
